# flaskchat

./: .env  README.md  pyproject.toml  run.py
app/: Dockerfile  auth.py  docker-compose.yml  main.py  models.py
app/docker/: .env-postgresql
app/templates/: base.html  edit_profile.html  home.html  login.html  login_error.html  not_authorized_base.html  profile.html  room.html  signup.html  signup_error.html  welcome.html
migrations/versions/: 304ff9db5743_add_table_user.py
