[tool.poetry]
name = "flaskchat"
version = "0.1.0"
description = ""
authors = ["rinaa808 <kyzuuer@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
flask-socketio = "^5.3.4"
flask-cqlalchemy = "^2.0.0"
flask-migrate = "^4.0.4"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.6"
requests = "^2.31.0"
flask-login = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
